made chages to html and less files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,95 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <div class="container">
+      <nav class="header">
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+  <section>
+    <div class="container2">
+      <img src="https://i.picsum.photos/id/1/300/300.jpg" alt=""> 
+      <address>
+      9015 Ten Mile Rd<br>
+      Knoxville, TN 37923<br>
+      (405) 604-1696 (cell)<br>
+        </address>
+      </section>
+    </div>
+    <div class="title">
+      <h1>Jason Bokesch - Web Developer</h1>
+      <h4>Experienced developer looking for the right opportunity!</h4>
+      <br>
+      <h5>Although I am seeking a full time position, from time to time I am open to freelance work and side projects. Please fee free to reach out to me by clicking the button below.</h5>
+      <a href="#"><button>Contact Me!</button></a>
+      <h5>For examples of my work please click the button below to view my projects.</h5>
+      <a href="#"><button>My Projects!</button></a>
+    </div>
+  <section>
+    <div class="container3">
+      <h2>About Me...</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat ex laoreet tincidunt bibendum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam sollicitudin lectus et nisl condimentum, vitae condimentum erat posuere. Curabitur vel dui massa. Morbi et dictum ipsum. Integer et lacus felis. Nunc elementum dui orci, eget tempor lectus malesuada mattis. Curabitur non auctor enim. Nunc sit amet commodo eros, et ullamcorper turpis. Donec sed interdum est. Cras in tortor vitae erat tempus porta mattis vitae sem.</p>
+      <h3>My Skillset:</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS & LESS</li>
+        <li>JavaScript</li>
+        <li>Certified SalesForce Admin</li>
+        <li>Agile</li>
+        <li>Business Analysis</li>
+      </ul>
+    </div>
+    <div class="container4">
+      <h3>Employment History:</h3>
+      <table style="width: 65%">
+        <tr>
+          <th>Years</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Skills Used</th>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Love's Travel Stops</td>
+          <td>Salesforce Administrator</td>
+          <td>Salesforce, Agile</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>SafetySkills</td>
+          <td>Business Analyst</td>
+          <td>Salesforce, Data Analysis</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>United States Postal Service</td>
+          <td>Letter Carrier</td>
+          <td>Time Management</td>
+          </tr>
+        <tr>
+          <td>1</td>
+          <td>The Hertz Corporation</td>
+          <td>Business Analyst</td>
+          <td>SharePoint, Mapping</td>
+          </tr>
+      </table>
+    </div>
+  </section>
+  <footer>
+    <div class="footer">
+    <h4>Bill Smith - Web Developer Resume 2020</h4>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </nav>
+      </div>
+  </footer>
 </body>
 </html>
