made additional changes to readme, html, and less files

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       9015 Ten Mile Rd<br>
       Knoxville, TN 37923<br>
       (405) 604-1696 (cell)<br>
+        <a class="email" href="mailto:jbokesch7628@gmail.com">Jbokesch7628@gmail.com</a>
         </address>
       </section>
     </div>
@@ -43,10 +44,12 @@
       <h5>For examples of my work please click the button below to view my projects.</h5>
       <a href="#"><button>My Projects!</button></a>
     </div>
-  <section>
-    <div class="container3">
-      <h2>About Me...</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat ex laoreet tincidunt bibendum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam sollicitudin lectus et nisl condimentum, vitae condimentum erat posuere. Curabitur vel dui massa. Morbi et dictum ipsum. Integer et lacus felis. Nunc elementum dui orci, eget tempor lectus malesuada mattis. Curabitur non auctor enim. Nunc sit amet commodo eros, et ullamcorper turpis. Donec sed interdum est. Cras in tortor vitae erat tempus porta mattis vitae sem.</p>
+  <section class="container3">
+    <div class="aboutMe">
+      <h3>About Me...</h3>
+      <p>I am currently enrolled in the Full Stack Web Development program at Lambda School. I am currently a Certified Salesforce Administrator and will be siiting for both my App Builder and Advanced Admin certifiations. I am thoroughly looking forward to learning more about web development and starting a new chapter in my career. I enjoy watching college football, ice hockey, playing video games and learning to play my bass guitar.</p>
+    </div>
+    <div class="skills">
       <h3>My Skillset:</h3>
       <ul>
         <li>HTML</li>
@@ -57,6 +60,7 @@
         <li>Business Analysis</li>
       </ul>
     </div>
+  </section>
     <div class="container4">
       <h3>Employment History:</h3>
       <table style="width: 65%">
