made chages to html, readme, and Less files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="header">
         <a href="index.html">Home</a>
         <a href="#">About</a>
-        <a href="#">Projects</a>
+        <a href="https://jasonbokeschportfolio.netlify.app/">Projects</a>
         <a href="#">Contact</a>
       </nav>
     </div>
@@ -37,10 +37,10 @@
     </div>
     <div class="title">
       <h1>Jason Bokesch - Web Developer</h1>
-      <h4>Experienced developer looking for the right opportunity!</h4>
+      <h4>Web developer looking for the right opportunity!</h4>
       <br>
       <h5>Although I am seeking a full time position, from time to time I am open to freelance work and side projects. Please fee free to reach out to me by clicking the button below.</h5>
-      <a href="#"><button>Contact Me!</button></a>
+      <a href="https://jasonbokeschportfolio.netlify.app/"><button>Contact Me!</button></a>
       <h5>For examples of my work please click the button below to view my projects.</h5>
       <a href="#"><button>My Projects!</button></a>
     </div>
@@ -63,7 +63,7 @@
   </section>
     <div class="container4">
       <h3>Employment History:</h3>
-      <table style="width: 65%">
+      <table style="width: 100%">
         <tr>
           <th>Years</th>
           <th>Company</th>
@@ -73,7 +73,7 @@
         <tr>
           <td>2</td>
           <td>Love's Travel Stops</td>
-          <td>Salesforce Administrator</td>
+          <td>Salesforce Admin</td>
           <td>Salesforce, Agile</td>
         </tr>
         <tr>
@@ -84,13 +84,13 @@
         </tr>
         <tr>
           <td>3</td>
-          <td>United States Postal Service</td>
+          <td>U.S. Postal Service</td>
           <td>Letter Carrier</td>
           <td>Time Management</td>
           </tr>
         <tr>
           <td>1</td>
-          <td>The Hertz Corporation</td>
+          <td>Hertz Corp</td>
           <td>Business Analyst</td>
           <td>SharePoint, Mapping</td>
           </tr>
@@ -99,11 +99,11 @@
   </section>
   <footer>
     <div class="footer">
-    <h4>Bill Smith - Web Developer Resume 2020</h4>
+    <h4>Jason Bokesch - Web Developer Resume 2020</h4>
     <nav>
         <a href="index.html">Home</a>
         <a href="#">About</a>
-        <a href="#">Projects</a>
+        <a href="https://jasonbokeschportfolio.netlify.app/">Projects</a>
         <a href="#">Contact</a>
       </nav>
       </div>
