made changes to links on html file

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <h4>Web developer looking for the right opportunity!</h4>
       <br>
       <h5>Although I am seeking a full time position, from time to time I am open to freelance work and side projects. Please fee free to reach out to me by clicking the button below.</h5>
-      <a href="https://jasonbokeschportfolio.netlify.app/"><button>Contact Me!</button></a>
+      <a href="#"><button>Contact Me!</button></a>
       <h5>For examples of my work please click the button below to view my projects.</h5>
-      <a href="#"><button>My Projects!</button></a>
+      <a href="https://jasonbokeschportfolio.netlify.app/"><button>My Projects!</button></a>
     </div>
   <section class="container3">
     <div class="aboutMe">
